--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,7 +1,3 @@
-.dashboard-container{
-    padding: 50px 70px 50px 70px;
-    min-height: 100vh;
-}
 
 .users-header{
     display: flex;
@@ -13,6 +9,14 @@
 
 .pages{
     cursor: pointer;
+    user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+}
+
+.tickets{
+    padding-left: 30px;
+    padding-right: 20px;
 }
 
 
