Fixing bugs, adding new features

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -19,7 +19,10 @@
     padding-right: 20px;
 }
 
-
+.micronodes{
+    overflow-y: auto;
+    overflow-x: hidden;
+}
 .card-content{
     padding: 15px !important;
 }
